force-app/main/default/objects/FlexiChk__Checklist_Item__c/FlexiChk__Checklist_Item__c.object-meta.xml
<CustomObject>
    <label>Checklist Item</label>
    <nameField>
        <displayFormat>ITEM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>