force-app/main/default/objects/FlexiChk__Checklist_Item__c/fields/FlexiChk__Answer__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Answer__c</fullName>
    <label>Answer</label>
    <type>TextArea</type>
</CustomField>