force-app/main/default/objects/FlexiChk__Checklist_Item__c/fields/FlexiChk__Checklist_Item_Template__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Checklist_Item_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Item Template</label>
    <referenceTo>FlexiChk__Checklist_Item_Template__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>