force-app/main/default/objects/FlexiChk__Checklist_Item__c/fields/FlexiChk__Question_Type__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FlexiChk__Checklist_Item_Question_Type</valueSetName>
    </valueSet>
</CustomField>