force-app/main/default/objects/FlexiChk__Checklist_Item__c/fields/FlexiChk__Visible__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>